cw_cli/tests/snapshots/init__init_snapshot_fish_post_99_fig_post.snap
---
source: cw_cli/tests/init.rs
expression: init
---
set -g CW_SHELL "/bin/zsh"
builtin contains $HOME/.local/bin $PATH
or set --append PATH $HOME/.local/bin

builtin contains $HOME/.local/bin $PATH
or set --append PATH $HOME/.local/bin

alias q='cw ai'

set --query TTY; or set TTY (command tty)
set --export TTY

set --export SHELL_PID $fish_pid
set --export CW_SET_PARENT $TERM_SESSION_ID
set --export LC_CW_SET_PARENT $TERM_SESSION_ID

set --query CW_SHELL; or set CW_SHELL (cw _ get-shell)

function fig_osc
    builtin printf "\033]697;$argv[1]\007" $argv[2..-1]
end

function fig_copy_fn
    functions --erase $argv[2]
    functions --copy $argv[1] $argv[2]
    #builtin functions $argv[1] | sed "s/^function $argv[1]/function $argv[2]/" | source
end

function fig_fn_defined
    functions --query $argv[1]
    #test (builtin functions $argv[1] | command grep -vE '^ *(#|function |end$|$)' | command wc -l | command xargs) != 0
end

function fig_wrap_prompt
    set -l last_status $status
    fig_osc StartPrompt

    builtin printf "%b" (string join "\n" $argv)
    fig_osc EndPrompt

    return $last_status
end

function fig_preexec --on-event fish_preexec
    fig_osc "OSCLock=%s" "$CWTERM_SESSION_ID"
    fig_osc PreExec

    if fig_fn_defined fig_user_mode_prompt
        fig_copy_fn fig_user_mode_prompt fish_mode_prompt
    end

    if fig_fn_defined fig_user_right_prompt
        fig_copy_fn fig_user_right_prompt fish_right_prompt
    end

    fig_copy_fn fig_user_prompt fish_prompt

    set fig_has_set_prompt 0
end

function fig_precmd --on-event fish_prompt
    set -l last_status $status

    fig_osc "OSCUnlock=%s" "$CWTERM_SESSION_ID"
    fig_osc "Dir=%s" "$PWD"
    fig_osc "Shell=fish"
    fig_osc "ShellPath=%s" "$CW_SHELL"
    if test -n "$WSL_DISTRO_NAME"
        fig_osc "WSLDistro=%s" "$WSL_DISTRO_NAME"
    end
    fig_osc "PID=%d" "$fish_pid"
    fig_osc "ExitCode=%s" "$last_status"
    fig_osc "TTY=%s" "$TTY"
    fig_osc "Log=%s" "$CW_LOG_LEVEL"
    fig_osc "FishSuggestionColor=%s" "$fish_color_autosuggestion"

    if test -n "$USER"
        fig_osc "User=%s" "$USER"
    else
        fig_osc "User=root" 
    end

    if test $fig_has_set_prompt = 1
        fig_preexec
    end

    if fig_fn_defined fish_mode_prompt
        fig_copy_fn fish_mode_prompt fig_user_mode_prompt
        function fish_mode_prompt
            fig_wrap_prompt (fig_user_mode_prompt)
        end
    end

    if fig_fn_defined fish_right_prompt
        fig_copy_fn fish_right_prompt fig_user_right_prompt
        function fish_right_prompt
            fig_wrap_prompt (fig_user_right_prompt)
        end
    end

    fig_copy_fn fish_prompt fig_user_prompt
    function fish_prompt
        fig_wrap_prompt (fig_user_prompt)
        fig_osc NewCmd=$CWTERM_SESSION_ID
    end

    set fig_has_set_prompt 1

    if command -v cw &>/dev/null
        begin; command cw _ pre-cmd --alias (alias) &> /dev/null &; end
    end
end

set fig_has_set_prompt 0

if test -n "$PROCESS_LAUNCHED_BY_CW"
    fig_osc DoneSourcing
end

begin; command cw _ pre-cmd --alias (alias) &> /dev/null &; end


